--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
+            <version>5.8.23</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
